# kedro-dvc

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  Dockerfile  License  README.md  dockerfile  mypy.ini  pyproject.toml  setup.py
.github/workflows/: ci.yml
doc/: design.md
docs/source/: conf.py  index.rst
src/: kedro_dvc.py  requirements.txt  setup.py
src/basic_project/: __init__.py  __main__.py  settings.py
src/demo/: __init__.py
src/kedro_dvc/: __init__.py  cli.py  create_sample_project.py  exceptions.py  kd_context.py  logger.py  plugin.py  setup.py
src/kedro_dvc/data/: __init__.py  catalog.py  constants.py  update.py
src/tests/: test_run.py
tests/: conftest.py  datautil.py  fix_tmp_dir_session_test_util.py  fixtures.py  test_cli.py  test_context.py  test_create-sample-project.py  test_create_sample_project.py  test_demo.py  test_fixtures.py  util.py
tests/data/: test_data_catalog.py  test_data_update.py
tests/setup/: check_setup.py  test_cli_setup.py  test_setup.py
