[tool.poetry]
authors = ["Shaun Cutts <shaunc@factfiber.com>"]
description = "Kedro-DVC integration to track and distribute experiments."
license = "See License in LICENSE"
name = "kedro-dvc"
version = "0.3.0-alpha.1"

packages = [{include = "kedro_dvc", from = "src"}]

[tool.poetry.dependencies]
dvc = ">=2.10,<3"
kedro = ">=0.18.0, <1"
numpy = "^1.22.2"
pygit2 = "^1.9.0"
python = ">=3.8, <3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.931"
pre-commit = "^2.17.0"
pytest = "^7.0.0"
pytest-cases = "^3.6.8"
pytest-cov = "^3.0.0"
pytest-watcher = "^0.2.3"
pytest-mock = "^3.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core @ git+https://github.com/python-poetry/poetry-core.git@master"]

[tool.poetry-exec-plugin.commands]
"build-docker" = "docker build -t factfiber/kedro-dvc-test ."
create-sample-project = "bin/create-sample-project.sh"
"run-docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest"
"test:cov-docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run pytest --cov --cov-report term-missing"
"test:cov-local" = "poetry run pytest --cov --cov-report term-missing"
"test:docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run pytest"
"test:local" = "poetry run pytest"
"test:watch-cov-docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run ptw -- --last-failed --new-first --cov --cov-report term-missing tests"
"test:watch-cov-local" = "poetry run ptw . -- --last-failed --new-first  --cov kedro_dvc --cov-report term-missing tests"
"test:watch-docker" = "docker run --rm -it -v $PWD/src:/app/src -v $PWD/tests:/app/tests factfiber/kedro-dvc-test:latest poetry run ptw -- --last-failed --new-first"
"test:watch-local" = "poetry run ptw -- --last-failed --new-first"

# NB poetry does not (yet?) support PEP 621
[tool.poetry.plugins."kedro.project_commands"]
dvc = "kedro_dvc.cli:dvc"

[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
include = '''\.pyi?$'''
line-length = 80
target-version = ["py39"]

[tool.isort]
# make it compatible with black
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

markers = [
  "slow: mark test as slow to run",
]

[tool.mypy]
allow_untyped_calls = false
follow_imports = "skip"
ignore_missing_imports = true
plugins = "numpy.typing.mypy_plugin"
